Add capability generators, Maven metadata, and CLI coverage